[package]
name = "crustradean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.84"
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.4", features = [ "derive" ]}
console = "0.15.8"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.4", features = [ "json" ]}
serde = {version = "1.0.202", features = [ "derive" ]}
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
